force-app/main/default/objects/Ship_To__c/fields/Account_and_Shiptto_Rep_Networkd_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_and_Shiptto_Rep_Networkd_ID__c</fullName>
    <description>Concatenation of the shipto&apos;s billto account information and the shipto&apos;s rep information for use by Account Reassignment process</description>
    <formula>Bill_To_Account__r.Account_SysDivBillTo__c &amp; Account_Owner__r.Network_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account and Shipto  Rep Network ID</label>
    <type>Text</type>
</CustomField>