force-app/main/default/objects/Ship_To__c/fields/Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number__c</fullName>
    <label>Bill To Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>