force-app/main/default/objects/Ship_To__c/fields/Credit_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Code__c</fullName>
    <description>Fed in by DW</description>
    <label>Credit Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZZ</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>ZS</fullName>
            </value>
            <value>
                <fullName>Z*</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>