force-app/main/default/objects/Ship_To__c/fields/CSC_Group_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>CSC_Group_Mailbox__c</fullName>
    <description>Created to hold the group mailbox for the CSC that will be keying the orders for the Ship To.  The orders are coming in from different ordering portals and only go to one group mailbox.</description>
    <label>CSC Group Mailbox</label>
    <type>Email</type>
</CustomField>