force-app/main/default/objects/Ship_To__c/fields/CSP_Primary__c.field-meta.xml
<CustomField>
    <fullName>CSP_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSP Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ship_Tos1</relationshipName>
    <type>Lookup</type>
</CustomField>