force-app/main/default/objects/Ship_To__c/fields/CSP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>CSP_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSP Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ship_Tos2</relationshipName>
    <type>Lookup</type>
</CustomField>