force-app/main/default/objects/Ship_To__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer_Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>