force-app/main/default/objects/Ship_To__c/fields/iRep__c.field-meta.xml
<CustomField>
    <fullName>iRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>iRep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Primary_Sales_Rep__c.iRep_Indicator__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>iRep Ship Tos</relationshipLabel>
    <relationshipName>Ship_Tos</relationshipName>
    <type>Lookup</type>
</CustomField>