force-app/main/default/objects/Ship_To__c/fields/iRep_Code__c.field-meta.xml
<CustomField>
    <fullName>iRep_Code__c</fullName>
    <label>iRep Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>