force-app/main/default/objects/Ship_To__c/fields/iRep_Name__c.field-meta.xml
<CustomField>
    <fullName>iRep_Name__c</fullName>
    <label>iRep Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>