force-app/main/default/objects/Ship_To__c/fields/iRep_Plan__c.field-meta.xml
<CustomField>
    <fullName>iRep_Plan__c</fullName>
    <formula>IF( iRep_Plan_Code__c =&quot;X&quot;, &quot;i99&quot;, 
IF( iRep_Plan_Code__c =&quot;T&quot;, &quot;i20&quot;, 
IF( iRep_Plan_Code__c =&quot;O&quot;, &quot;i50&quot;, 
IF( iRep_Plan_Code__c =&quot;S&quot;, &quot;i60&quot;, 
IF( iRep_Plan_Code__c =&quot;x&quot;, &quot;i99&quot;, 
IF( iRep_Plan_Code__c =&quot;t&quot;, &quot;i20&quot;, 
IF( iRep_Plan_Code__c =&quot;o&quot;, &quot;i50&quot;, 
IF( iRep_Plan_Code__c =&quot;s&quot;, &quot;i60&quot;, 



&quot;&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iRep Plan</label>
    <type>Text</type>
</CustomField>