force-app/main/default/objects/Ship_To__c/fields/iRep_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>iRep_Plan_Code__c</fullName>
    <label>iRep Plan Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>