force-app/main/default/objects/Ship_To__c/fields/iRep_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>iRep_Plan_Effective_Date__c</fullName>
    <label>iRep Plan Effective Date</label>
    <type>Date</type>
</CustomField>