force-app/main/default/objects/Ship_To__c/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <description>Fed in from EVO</description>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>