force-app/main/default/objects/Ship_To__c/fields/Legacy_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Division_Code__c</fullName>
    <label>Legacy Division Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>