force-app/main/default/objects/Ship_To__c/fields/Legacy_Division_Desc__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Division_Desc__c</fullName>
    <label>Legacy Division Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>