force-app/main/default/objects/Ship_To__c/fields/Legacy_System_Cd__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Cd__c</fullName>
    <label>Legacy System Cd</label>
    <length>40</length>
    <type>Text</type>
</CustomField>