force-app/main/default/objects/Ship_To__c/fields/MAX_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>MAX_Company_Code__c</fullName>
    <description>Added for data feed from DW to include the MAX company code</description>
    <label>MAX Company Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>