force-app/main/default/objects/Ship_To__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RELATED TO B2B - had to undelete because DW is trying to feed it in</description>
    <label>PO Required</label>
    <type>Checkbox</type>
</CustomField>