force-app/main/default/objects/Ship_To__c/fields/Related_Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Ship_To_Code__c</fullName>
    <description>This will be used to hold the old ship to code for use in merging ship tos</description>
    <label>Related Ship To Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>