force-app/main/default/objects/Ship_To__c/fields/Respect_Printer__c.field-meta.xml
<CustomField>
    <fullName>Respect_Printer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marketing updates this field to show whether or not a printer is a Respect Printer.</inlineHelpText>
    <label>Respect Printer</label>
    <type>Checkbox</type>
</CustomField>