force-app/main/default/objects/Ship_To__c/fields/Sales_Last_18_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_18_Months__c</fullName>
    <description>Fed in from EVO</description>
    <label>Sales Last 18 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>