force-app/main/default/objects/Ship_To__c/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <label>Sales Rep Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>