force-app/main/default/objects/Ship_To__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipLabel>Ship Tos</relationshipLabel>
    <relationshipName>Ship_Tos</relationshipName>
    <type>Lookup</type>
</CustomField>