force-app/main/default/objects/Ship_To__c/fields/Ship_To_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Formula__c</fullName>
    <formula>Name &amp; &quot; (#&quot; &amp; Ship_To_Code__c &amp; &quot;) &quot; &amp; Address_Line1__c &amp; &quot;, &quot; &amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; &quot; &quot; &amp; Postal_Code__c</formula>
    <label>Ship To Address Formula</label>
    <type>Text</type>
</CustomField>