force-app/main/default/objects/Ship_To__c/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <label>Ship To Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>