force-app/main/default/objects/Ship_To__c/fields/Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Number__c</fullName>
    <externalId>true</externalId>
    <label>Ship To Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>