force-app/main/default/objects/Ship_To__c/fields/Ship_To_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Status__c</fullName>
    <formula>IF( ISPICKVAL( Active__c , &quot;Yes&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001AxOs&quot;, &quot;This Account is Active&quot;),

IF( ISPICKVAL( Active__c , &quot;No&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001AxOx&quot;, &quot;This Account is Inactive&quot;),NULL)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Status</label>
    <type>Text</type>
</CustomField>