force-app/main/default/objects/Ship_To__c/fields/ShipTo_Acct_Core__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Acct_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShipTo Acct Core</label>
    <type>Checkbox</type>
</CustomField>