force-app/main/default/objects/Ship_To__c/fields/ShipTo_BillTo_Rep_Same__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_BillTo_Rep_Same__c</fullName>
    <formula>IF(Account_Owner__r.Network_Id__c = Bill_To_Account__r.Owner.Network_Id__c , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShipTo BillTo Rep Same</label>
    <type>Checkbox</type>
</CustomField>