force-app/main/default/objects/Ship_To__c/fields/Shipto_DW_Key__c.field-meta.xml
<CustomField>
    <fullName>Shipto_DW_Key__c</fullName>
    <description>Key used by DW to load and update shipto data</description>
    <externalId>true</externalId>
    <label>Shipto DW Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>