force-app/main/default/objects/Ship_To__c/fields/ShipTo_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Rep_Code__c</fullName>
    <label>ShipTo Rep Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>