force-app/main/default/objects/Ship_To__c/fields/ShiptoCounter__c.field-meta.xml
<CustomField>
    <fullName>ShiptoCounter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>