force-app/main/default/objects/Ship_To__c/fields/ShowContractedItemsOnly__c.field-meta.xml
<CustomField>
    <fullName>ShowContractedItemsOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Contracted Items Only</label>
    <type>Checkbox</type>
</CustomField>