force-app/main/default/objects/Ship_To__c/validationRules/Ensure_iRep_is_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_iRep_is_Valid</fullName>
    <active>false</active>
    <description>ensures users can only enter valid ireps</description>
    <errorConditionFormula>AND( 
iRep__c &lt;&gt; NULL, 
TEXT(iRep__r.iRep_Indicator__c) &lt;&gt; &quot;Y&quot; 
, 
$User.ProfileId &lt;&gt; &quot;00e70000000j606&quot;, 
$User.ProfileId &lt;&gt; &quot;00e70000000swa5&quot;, 
ISCHANGED(iRep__c) 
)</errorConditionFormula>
    <errorDisplayField>iRep__c</errorDisplayField>
    <errorMessage>This iRep is not a valid iRep. Please select someone else.</errorMessage>
</ValidationRule>