force-app/main/default/objects/Ship_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>Customer_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>