force-app/main/default/objects/Ship_To__c/listViews/Ship_Tos_Montreal.listView-meta.xml
<ListView>
    <fullName>Ship_Tos_Montreal</fullName>
    <columns>Ship_To_Code__c</columns>
    <columns>NAME</columns>
    <columns>Address_Line1__c</columns>
    <columns>Address_Line2__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Montreal</value>
    </filters>
    <label>Ship Tos Montreal</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>