force-app/main/default/objects/Ship_To__c/listViews/Ship_Tos_with_iRep_Info.listView-meta.xml
<ListView>
    <fullName>Ship_Tos_with_iRep_Info</fullName>
    <columns>NAME</columns>
    <columns>iRep__c</columns>
    <columns>iRep_Code__c</columns>
    <columns>iRep_Name__c</columns>
    <columns>iRep_Plan__c</columns>
    <columns>iRep_Plan_Code__c</columns>
    <columns>iRep_Plan_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>iRep_Plan__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ship Tos with iRep Info</label>
    <language>en_US</language>
</ListView>